--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "price-tracker-be",
   "version": "1.0.0",
   "description": "backend for pricetracker vinhan.dev",
-  "main": "index.js",
+  "main": "index.ts",
   "repository": "git@github.com-dev:vinhandev/price-tracker-be.git",
   "author": "vinhandev <vinhan.dev@gmail.com>",
   "license": "MIT",
@@ -10,13 +10,18 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.ts"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.4"
+    "@flydotio/dockerfile": "^0.5.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "typescript": "^5.4.3"
   }
 }
