fix: import for firebase

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ts-node": "^10.9.2"
   },
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "deploy": "fly deploy"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.4",
