--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "author": "vinhandev <vinhan.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
+    "puppeteer": "^22.6.3",
     "ts-node": "^10.9.2"
   },
   "scripts": {
